# db-interfaces

./: .env  .gitignore  .zshrc  Cargo.toml  README.md
interfaces/: Cargo.toml
interfaces/src/: alloy_types.rs  errors.rs  lib.rs  params.rs  tables.rs  test_utils.rs
interfaces/src/clickhouse/: README.md  client.rs  config.rs  db.rs  dbms.rs  errors.rs  mod.rs  params.rs  serde_utils.rs  shared.rs  tables.rs  types.rs  utils.rs
interfaces/src/clickhouse/test_utils/: client.rs  dbms.rs  mod.rs  table.rs  test_db.rs
interfaces/src/postgres/: client.rs  config.rs  dbms.rs  errors.rs  mod.rs  shared.rs  tables.rs  types.rs  utils.rs
interfaces/src/postgres/test_utils/: client.rs  dbms.rs  table.rs
macros/: Cargo.toml
macros/src/: derive_all.rs  lib.rs
macros/src/clickhouse/: mod.rs  remote_table.rs  table.rs  types.rs  utils.rs
macros/src/postgres/: mod.rs  table.rs  utils.rs
tests/: Cargo.toml
tests/sql/tables/: sub_db0.table0_3.sql  sub_db0.table0_4.sql  table0_0.sql  table0_1.sql  table0_2.sql  table1_0.sql  table1_1.sql
tests/src/: lib.rs  macro_tests.rs
