[package]
name = "db-interfaces-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["full"] }
itertools = "0.11.0"
quote = "1.0.35"
proc-macro2 = "1.0.78"
dotenv = "0.15.0"
regex = "1.6.0"
once_cell = "1.17.0"

[dev-dependencies]
metrics = "0.20.1"
trybuild = "1.0"
serial_test = "0.10"


[features]
test-utils = []