[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
db-interfaces = { path = "../interfaces", features = ["alloy-types", "test-utils"]}

# clickhouse
clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs", branch = "master" }

# serde
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"


